@@ -27,6 +27,14 @@ dependencies {
     }
 }
 
+tasks.withType(Test).configureEach {
+    jvmArgs('--enable-native-access=ALL-UNNAMED')
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs('--enable-native-access=ALL-UNNAMED')
+}
+
 tasks {
     test {
         jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
